src/test/deca/context/invalid/provided/class12.java
class A {
    int x;

    int setX(int x){
        this.x=x;
    }
}
{
    a = new A();
}